; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-http-client.c_htc_connected.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-http-client.c_htc_connected.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }
%struct.TYPE_2__ = type { i32 (%struct.connection*)* }

@outbound_http_connections = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @htc_connected(%struct.connection* %0) #0 {
  %2 = alloca %struct.connection*, align 8
  store %struct.connection* %0, %struct.connection** %2, align 8
  %3 = load i32, i32* @outbound_http_connections, align 4
  %4 = add nsw i32 %3, 1
  store i32 %4, i32* @outbound_http_connections, align 4
  %5 = load %struct.connection*, %struct.connection** %2, align 8
  %6 = call %struct.TYPE_2__* @HTC_FUNC(%struct.connection* %5)
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32 (%struct.connection*)*, i32 (%struct.connection*)** %7, align 8
  %9 = icmp ne i32 (%struct.connection*)* %8, null
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load %struct.connection*, %struct.connection** %2, align 8
  %12 = call %struct.TYPE_2__* @HTC_FUNC(%struct.connection* %11)
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (%struct.connection*)*, i32 (%struct.connection*)** %13, align 8
  %15 = load %struct.connection*, %struct.connection** %2, align 8
  %16 = call i32 %14(%struct.connection* %15)
  br label %17

17:                                               ; preds = %10, %1
  ret i32 0
}

declare dso_local %struct.TYPE_2__* @HTC_FUNC(%struct.connection*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
